fix: update footer styles for improved layout and spacing

--- a/chamber/styles/directory-base.css
+++ b/chamber/styles/directory-base.css
@@ -345,6 +345,11 @@ footer{
             height: auto;
         }
     
-        
+        /* FOOTER */
+        footer{
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 1em 4rem;
+        }
     
     }
